Fix activity text being cut off on mobile

--- a/web/css/activities.css
+++ b/web/css/activities.css
@@ -39,7 +39,8 @@ div.panel {
 
 div.panel.show {
     opacity: 1;
-    max-height: 500px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+	max-height: 100%;
+    padding: 10px;
 }
 
 button.accordion:after {
